Time: 16 ms (88.06%), Space: 94.6 MB (27.72%) - LeetHub